setup html structure

--- a/index.html
+++ b/index.html
@@ -12,8 +12,40 @@
 </head>
 <body>
 
+  <header>
+    <nav>
+      <div></div>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </nav>
+  </header>
 
+  <main>
+    <div></div>
 
+    <section class="3grid">
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
+
+    <section>
+      <div></div>
+      <div>
+        <h3></h3>
+        <p></p>
+        <button></button>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+
+  </footer>
 
 
 </body>
