--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <meta charset="UTF-8">
@@ -7,38 +8,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
-  <title>Wireframe</title>
+  <title>Wireframe Exercise</title>
 
 </head>
+
 <body>
 
   <header>
     <nav>
-      <div></div>
+      <img src="https://placehold.it/200x70/ddd" />
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Nav Item 1</li>
+        <li>Nav Item 2</li>
+        <li>Nav Item 3</li>
+        <li>Nav Item 4</li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <div></div>
+    <img class="hero" src="https://placehold.it/960x450/ddd" />
 
-    <section class="3grid">
-      <div></div>
-      <div></div>
-      <div></div>
+    <section class="threeGrid">
+      <img src="https://placehold.it/300x375/ddd" />
+      <img src="https://placehold.it/300x375/ddd" />
+      <img src="https://placehold.it/300x375/ddd" />
     </section>
-
-    <section>
-      <div></div>
+    <section class="ctr2">
+      <img src="https://placehold.it/480x400/ddd" />
       <div>
-        <h3></h3>
-        <p></p>
-        <button></button>
+        <h3>Featured Section Heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.</p> 
+        <button>Call to Action</button>
       </div>
     </section>
   </main>
@@ -51,5 +53,3 @@
 </body>
 
 </html>
-
-
