fixed div order

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <img src="https://placehold.it/480x400/ddd" />
       <div>
         <h3>Featured Section Heading</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.</p> 
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.<br/>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptas cupiditate nemo, quibusdam fugiat iure eum assumenda laudantium inventore maxime nam quam quis voluptates! Maiores non error ducimus consequuntur in.</p> 
         <button>Call to Action</button>
       </div>
     </section>
